implemented restart button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Itim&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    
     <div class="container">
 
         <div class="title">TIC TAC TOE</div>
@@ -34,7 +36,7 @@
         </div>
 
         <h1 id="status">The first 3 wins</h1>
-
+        <button id="btn">restart?</button>
         <div class="stats">
             <div class="player" id="player">You:  <span id="player_wins">0</span></div>
             <div class="tie" id="tie">Tie: <span id="tie_occurence">0</span> </div>
